--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test-simulator": "node simulator.js",
-    "postinstall": "node fix-aws-sdk.js"
+    "postinstall": "node fix-aws-sdk.js",
+    "vercel-build": "echo 'Building for Vercel'"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,8 @@
     "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
